aptosid-manual-reader (0.2.7) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 30 Sep 2010 23:34:21 +0200

aptosid-manual-reader (0.2.6) unstable; urgency=low

  * Updated the long description 

 -- Nikolas Poniros <edhunter@aptosid.com>  Thu, 30 Sep 2010 23:18:19 +0200

aptosid-manual-reader (0.2.5) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * wrap debian/control in a syntax compliant way.
  * bump standards version to 3.9.1, no changes necessary.
  * switch to compact dh7 rules.
  * Build-Conflicts: libqt3-dev.
  * switch to compat level 8.
  * rename to aptosid-manual-reader

  [ Nikolas Poniros ]
  * Updated copyright and added myself.
  * Fixed menu parsing.
  * Replaced code to call aptosid-apt-qt4 with a warning that language is not
    installed and the manual way to install it.
  * Removed aptosid-apt-qt4 from dependencies.
  * Commented out some aptosidcc specific code 
  * Do not highlight the words of the default search string 
  * Split loadManual function into smaller subfunctions
  * Added some tests to keep the application from segfaulting if it doesnt find
    a chapter/id
  * Re-wrote parts of the code to be able to read the new manual structure
  * Minor changes to allow the reader to display the images and use content.css
    from the manual

 -- Nikolas Poniros <edhunter@aptosid.com>  Thu, 30 Sep 2010 22:17:40 +0200

sidux-manual-reader (0.2.3) unstable; urgency=low

  * switch to dpkg-source 3.0 (native) format.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 05 May 2010 03:16:30 +0200

sidux-manual-reader (0.2.2) unstable; urgency=low

  * switch to compact dh7 rules.
  * Build-Conflicts: libqt3-dev
  * bump standards version to 3.8.4, no changes necessary.
  * add missing compat level, use compat level 7.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 05 May 2010 03:07:43 +0200

sidux-manual-reader (0.2.1) unstable; urgency=low

  * rebuild with gcc-4.4.
