@@ -1,8 +1,12 @@
 aptosid-manual-reader (0.2.7) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 30 Sep 2010 23:34:21 +0200
+  [ Nikolas Poniros ]
+  * Use the cover-pdf-XX.htm page as frontpage and not the index.
+
+ -- Nikolas Poniros <edhunter@aptosid.com>  Sat, 02 Oct 2010 17:44:55 +0200
 
 aptosid-manual-reader (0.2.6) unstable; urgency=low
 
